[project]
name = "llm-broker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.4.3",
    "httpx==0.27.0",
    "prometheus-client==0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["llm_broker"]